# sslog

./: .clang-tidy  .codechecker_cfg  .codechecker_skip  .gitignore  CMakeLists.txt  LICENSE  README.md  sslog.h
.github/workflows/: build.yml
ci/: codechecker.py  format.py  iwyu.py  tidy.py
cmake/: FindLibUnwind.cmake  Findzstd.cmake
docs/: configuration_reference_api.md.html  index.html  logging_reference_api.md.html  sscat.md.html  sslog.css  sslogread_cpp_api.md.html  sslogread_python_module.md.html
lib/: CMakeLists.txt  sslog-config.cmake
lib/include/: sslog.h
python/: CMakeLists.txt  README.md  setup.py
python/sslogread/: pySslogReader.cpp
test/: README.md  run_tests.py  test_base.py  test_build.py  test_logger.py  test_performance.py  test_performance_spdlog.py  test_reader.py
test/testsslog/: CMakeLists.txt  testPart.cpp  testPart.h  testSslog.cpp
tools/sscat/: CMakeLists.txt  logHandlerJson.cpp  logHandlerJson.h  logHandlerText.cpp  logHandlerText.h  logHandlerValues.cpp  logHandlerValues.h  sscat.cpp
tools/sslogread/: CMakeLists.txt  sslogread-config.cmake
tools/sslogread/include/sslogread/: sslogread.h  utils.h
tools/sslogread/src/: logSession.cpp  parserHelpers.cpp  stringDb.cpp  utils.cpp  vsnprintf.cpp
tools/ssview/: CMakeLists.txt
tools/ssview/app/: CMakeLists.txt  appCommon.cpp  appCommon.h  fileDialog.cpp  fileDialog.h  fontData.cpp  fontData.h  gfxBackend.h  gfxBackendGL.cpp  main.cpp  main.h  platform.cpp  platform.h  viewLog.cpp  viewPlot.cpp  viewText.cpp
tools/ssview/base/: CMakeLists.txt  base-config.cmake  bs.h  bsColor.h  bsHash.h  bsHashMap.h  bsHashSet.h  bsKeyLessHashMap.h  bsList.h  bsLookup.h  bsString.cpp  bsString.h  bsTime.h  bsVec.h
tools/ssview/graphic/: CMakeLists.txt  glHelper.cpp  glHelper.h  glWindows.h  graphic-config.cmake
tools/ssview/os/: CMakeLists.txt  glLinux.h  keycode.h  os-config.cmake  os.h  osLinux.cpp  osWindows.cpp
